<resources>
    <string name="app_name">AnimalAdoption</string>

    <!--  Login/CreateAccount - START  -->
    <string name="OlvideContra"><u>Forgot my password</u></string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_pass_hint">Confirm password</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="btn_login">Login</string>
    <string name="btn_create_account">Create Account</string>
    <string name="register_text">Or register below</string>
    <string name="have_account_text">Do you already have an account?</string>
    <string name="progress_loading">Loading…</string>
    <string name="signForm_helperText">This field is required.</string>
    <string name="blank">&#160;</string>
    <string name="password_dntMatch">Passwords must match. Try again.</string>
    <string name="snackbar_dismiss">Cancel</string>
    <string name="email_verification">Verify your account with the email sent to your mailbox.</string>
    <string name="administrator_check">Administrator</string>
    <!-- Login/CreateAccount - END  -->

    <!--  Forgot Password Activity - START  -->
    <string name="recover_account">Recover Your Account</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">confirm new password</string>
    <string name="try_login_divider_forget_pass">Please try to sign in after resetting your password.</string>
    <!--  Forgot Password Activity - END  -->

    <!--  Forgot AddAnimal Activity - START  -->
    <string name="Name">Name</string>
    <string name="Kind">Kind</string>
    <string name="Gender">Gender</string>
    <string name="Age">Age</string>
    <string name="Breed">Breed</string>
    <string name="Size">Size</string>
    <!--  Forgot AddAnimal Activity - END  -->

    <!--  Forgot AddAnimal Activity - START  -->
    <string name="AddAnimal">Add animal</string>
    <string name="Logout">Logout</string>
    <!--  Forgot AddAnimal Activity - END  -->

    <!--  Generic texts  -->
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="chat">Chat</string>
    <string name="contact">Contact</string>
</resources>