<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/AnimalNameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/Name"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/red_error"
            app:helperTextTextColor="@color/red_error"
            app:helperText="@string/blank"
            app:errorContentDescription="@string/signForm_helperText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/AnimalNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/AnimalKindLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/Kind"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/red_error"
            app:helperTextTextColor="@color/red_error"
            app:helperText="@string/blank"
            app:errorContentDescription="@string/signForm_helperText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/AnimalKindField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/AnimalGenderSpinner"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/gradient_spinner"
            app:errorContentDescription="@string/signForm_helperText"
            tools:ignore="SpeakableTextPresentCheck"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/AnimalAgeLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/Age"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/red_error"
            app:helperTextTextColor="@color/red_error"
            app:helperText="@string/blank"
            app:errorContentDescription="@string/signForm_helperText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/AnimalAgeField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/AnimalBreedLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/Breed"
            app:errorEnabled="true"
            app:boxStrokeErrorColor="@color/red_error"
            app:helperTextTextColor="@color/red_error"
            app:helperText="@string/blank"
            app:errorContentDescription="@string/signForm_helperText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/AnimalBreedField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/AnimalSizeSpinner"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/gradient_spinner"
            app:errorContentDescription="@string/signForm_helperText"
            tools:ignore="SpeakableTextPresentCheck"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="147dp"
            android:layout_margin="4dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="20dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/save" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/red_error"
                android:text="@string/delete" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>