<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="152dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:backgroundTint="@color/teal_700"
                android:text="@string/AddAnimal" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnChat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="55dp"
                android:backgroundTint="@color/green"
                android:text="@string/chat" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogout"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="82dp"
                android:layout_marginEnd="83dp"
                android:layout_marginBottom="6dp"
                android:backgroundTint="@color/red_error"
                android:text="@string/Logout" />


        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reciclerViewAnimals"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_animal"/>


    </LinearLayout>
</ScrollView>